<<<<<<< HEAD
syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.energy";
option java_outer_classname = "EnergyServiceImpl";

package energy;

service EnergyService {

	rpc switchDevices (DevicesOffRequest) returns (DevicesOffResponse) {}; //unary RPC DONE

	rpc switchLightsOn (LightsOnRequest) returns (LightsResponse) {};//unary RPC DONE
	
	rpc lightIntensity (stream LightAdjustRequest) returns (LightsResponse) {};//client stream RPC
}

message DevicesOffRequest {
	bool deviceOff = 1;
}

message DevicesOffResponse {
	bool deviceOff = 1;
}

message Lights{
	int32 lightId = 1;
	string lightStatus = 2;
	int32 adjust = 3;
}

message LightsOnRequest {
	int32 lightId = 1;
}

message LightsResponse {
	Lights light = 1;
}

message LightAdjustRequest {
	int32 lightId = 1;
	int32 adjust = 2;
}


=======
syntax = "proto3";

option java_multiple_files = true;
option java_package = "services.energy";

package energy;

service EnergyUtility {

	rpc switchDevices (DevicesOffRequest) returns (DevicesOffResponse) {}; //unary RPC

	rpc switchLightsOn (LightsSwitchRequest) returns (LightsResponse) {};//unary RPC
	
	rpc lightIntensity (LightAdjustRequest) returns (stream LightAdjustResponse) {};//server stream RPC
}

message DevicesOffRequest {
	string deviceOff = 1;
}

message DevicesOffResponse {
	string deviceOff = 1;
}

message LightsSwitchRequest {
	int32 lightId = 1;
}

message LightsResponse {
	string lightOn = 2;
}

message LightAdjustRequest {
	int32 lightId = 1;
	string adjust = 2;
}

message LightAdjustResponse {
	string adjustMade = 1;
}

>>>>>>> 30520d2517acaf6dc5e0ec3ce0028e175347c53a
